# vnite

./: .env.example  .eslintrc.cjs  .gitignore  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  components.json  crowdin.yml  data.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.1722589500248.mjs  electron.vite.config.mjs  electron.vite.config.ts  env.d.ts  eslint.config.mjs  gameDetails.json  gameId.json  gameList.json  installer.nsh  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feat.yml  suggestion.yml
dev/: window-state.json
dev/database/: game.json  games.json
docs/: index.md
docs/.vitepress/: config.mts
native/: .gitignore  Cargo.toml  browser.js  build.rs  package.json  pnpm-lock.yaml  test.ts  tsconfig.json
native/src/: lib.rs  napi_foreground.rs  napi_log.rs  napi_monitor.rs  napi_win32.rs  runtime.rs
native/src/foreground/: foreground_hook.rs  mod.rs
native/src/log/: mod.rs
native/src/monitor/: gm.rs  mod.rs
native/src/monitor/etw_monitor/: etw_trace.rs  mod.rs
native/src/monitor/polling_monitor/: mod.rs  polling.rs
native/src/monitor/wmi_monitor/: mod.rs  wmi_async.rs
native/src/tests/: mod.rs  test_monitor.rs  test_win32.rs
native/src/utils/: mod.rs  path.rs  types.rs
native/src/win32/: hook.rs  mod.rs  notification.rs  nt_path.rs  privilege.rs  process.rs
patches/: pouchdb+9.0.0.patch
scripts/: update-json.js  update-json.mjs
(+1138 files in other folders)
