
[package]
name = "vnite_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["async"] }
napi-derive = "3.0.0"
tokio = { version = "1.47.1", features = ["full"] }
windows = { version = "0.62", features = [
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_System_Com",
  "Win32_System_Wmi",
  "Win32_System_Variant",
  "Win32_Security",
  "Win32_System_Rpc",
  "Win32_System_Ole",
] }
windows-core = "0.62.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
