
[package]
name = "vnite_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.42"
napi = { version = "3.0.0", features = ["async"] }
napi-derive = "3.0.0"
quick-xml = "0.38.3"
regex = "1.12.2"
tokio = { version = "1.47.1", features = ["full"] }
windows = { version = "0.62", features = [
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_System_Com",
  "Win32_System_Wmi",
  "Win32_System_Variant",
  "Win32_Security",
  "Win32_System_Rpc",
  "Win32_System_Ole",
  "UI_Notifications",
  "Data_Xml_Dom",
  "Win32_Foundation",
  "Win32_System_Diagnostics_Etw",
  "Win32_System_Time",
  "Win32_Storage_FileSystem"
] }
windows-core = "0.62.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
